UI bugs fixed,UI Responsive Fixed,Route modules implementation,UI design implementation,bugs and errors fixed

--- a/src/Rentler.Admin.Web/Rentler.Admin.Web.csproj
+++ b/src/Rentler.Admin.Web/Rentler.Admin.Web.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="src\app\app_component\" />
     <Folder Include="src\libs\" />
   </ItemGroup>
   <ItemGroup>
