Set up token service, AuthGuard service and Toast Service

--- a/src/Rentler.Admin.Web/Rentler.Admin.Web.csproj
+++ b/src/Rentler.Admin.Web/Rentler.Admin.Web.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Folder Include="src\app\CommonConstants\" />
+    <Folder Include="src\app\guard\" />
     <Folder Include="src\app\Services\" />
     <Folder Include="src\app\Pipes\" />
   </ItemGroup>
