--- a/src/Rentler.Admin.Web/package.json
+++ b/src/Rentler.Admin.Web/package.json
@@ -25,9 +25,11 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jsrsasign": "^7.2.2",
+    "ng2-toasty": "^4.0.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",
-    "jsrsasign": "^7.2.2"
+    "angular2-jwt": "^0.2.3"
   },
   "devDependencies": {
     "@angular/cli": "^1.1.3",
