--- a/src/Rentler.Admin.Web/package.json
+++ b/src/Rentler.Admin.Web/package.json
@@ -23,13 +23,14 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jsrsasign": "^7.2.2",
+    "ng2-md-datatable": "^1.4.0",
     "ng2-toasty": "^4.0.3",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "angular2-jwt": "^0.2.3"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.1.3",
