added Custom HttpService, added progress bar upon request

--- a/src/Rentler.Admin.Web/Rentler.Admin.Web.csproj
+++ b/src/Rentler.Admin.Web/Rentler.Admin.Web.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <Folder Include="src\app\CommonConstants\" />
     <Folder Include="src\app\guard\" />
+    <Folder Include="src\app\factories\" />
+    <Folder Include="src\app\options\" />
     <Folder Include="src\app\Services\" />
     <Folder Include="src\app\Pipes\" />
   </ItemGroup>
