--- a/src/Rentler.Admin.Web/package.json
+++ b/src/Rentler.Admin.Web/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.3",
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
