--- a/src/Rentler.Admin/Rentler.Admin.csproj
+++ b/src/Rentler.Admin/Rentler.Admin.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Common\Stripe\" />
     <Folder Include="Common\Ocean\" />
     <Folder Include="Listings\" />
+    <Folder Include="Adapters\" />
   </ItemGroup>
 
 </Project>
