Modified Rentler.Cache and Rentler.Screen

--- a/src/Rentler.Admin.Web/Rentler.Admin.Web.csproj
+++ b/src/Rentler.Admin.Web/Rentler.Admin.Web.csproj
@@ -58,6 +58,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\Rentler.Admin\Rentler.Admin.csproj" />
+    <ProjectReference Include="..\Rentler.Cache\Rentler.Cache.csproj" />
   </ItemGroup>
 
 </Project>
