--- a/src/Rentler.Screen/Rentler.Screen.csproj
+++ b/src/Rentler.Screen/Rentler.Screen.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2" />
+    <PackageReference Include="ServiceStack.Redis.Core" Version="1.0.43" />
+  </ItemGroup>
 
 </Project>
